# rss-notify

./: .gitignore  Cargo.toml  README.md
src/: config.rs  data.rs  lib.rs  main.rs
