[package]
name = "rss-notify"
version = "0.1.0"
edition = "2024"
description = "Schedule system notifications for your favorite RSS feeds."

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.14"
chrono = "0.4"
notify-rust = "4"
rss = "2"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
html2text = "0.15.5"
