[package]
name = "rss-notify"
version = "0.1.0"
edition = "2024"
description = "Schedule system notifications for your favorite RSS feeds."

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
notify-rust = "4"
rss = "2"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
html2text = "0.15.5"
toml = "0.9.7"
serde = "1.0.226"
directories = "6.0.0"
croner = "3.0.1"
